--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
@@ -7,7 +7,7 @@
     <div class="jmn-node-loading"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></div>
     {{ template.block('jmn_layout_top', _context)|raw }}
     <div class="jmn-wrapper">
-        {{ template.block('jmn_header_row', _context)|raw }}
+        {{ template.block('_jmn_columns', _context)|raw }}
         <div id="{{- "tree-#{id}" -}}" class="jmn-tree jmn-node jmn-sortable" data-id="{{ config.jsonMenuNested.id }}"  data-types="{{ config.nodes.types('_root')|json_encode|e('html_attr') }}"></div>
     </div>
     {{ template.block('jmn_layout_footer', _context)|raw }}
