--- a/EMS/core-bundle/src/Resources/views/core/modal.html.twig
+++ b/EMS/core-bundle/src/Resources/views/core/modal.html.twig
@@ -1,8 +1,8 @@
-<div class="modal core-modal fade" id="{{ id }}" tabindex="-1" role="dialog">
+<div class="modal core-modal fade" id="{{ id }}" tabindex="-1" role="dialog" data-keyboard="false">
     <div class="modal-dialog modal-{{ size|default('md') }}" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" tabindex="-1"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title"></h4>
             </div>
             <div class="modal-body modal-loading">
