--- a/demo/skeleton/template_ems/dashboard/sitemap.twig
+++ b/demo/skeleton/template_ems/dashboard/sitemap.twig
@@ -73,6 +73,20 @@
     {% endif %}
 {%  endblock ems_body %}
 
+{%- block jmn_menu_add -%}
+    <ul class="dropdown-menu pull-right">
+        <li>
+            <button class="ems-demo-add" data-modal-size="md">
+                <i class="fa fa-sign-in"></i>
+                Existing content
+            </button>
+        </li>
+        {% for addNode in addNodes %}
+            <li>{{ template.block('jmn_button_item_add', _context)|raw }}</li>
+        {% endfor %}
+    </ul>
+{%- endblock jmn_menu_add -%}
+
 {%  block ems_footer %}
     {% set sections = emsch_search('section', {
         "sort": {
@@ -140,11 +154,15 @@
             "size": 2,
         }).hits.hits %}
         {% if content|length == 0 %}
-            <div class="col-xs-12 text-center">
+            <div class="btn-group">
                 <a href="{{ current_path }}&item_id={{ item.id }}" class="json-post-button btn btn-sm btn-warning">
                     <i class="fa fa-plus"></i>
-                    Create {{ item.type }}
+                    New {{ item.type }}
                 </a>
+                <button class="btn btn-sm btn-warning attach-content" data-item-id="{{ item.id }}" data-item-type="{{ item.type }}">
+                    <i class="fa fa-sign-in"></i>
+                    Existing content
+                </button>
             </div>
         {% elseif content|length == 1 %}
             {% set info = "#{content.0._source._contenttype}:#{content.0._id}"|emsco_document_info %}
